# ur5_arm

./: README.md
hubo_pkg/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hubo_pkg/share/hubo_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_moveit_pkg/lib/my_moveit_pkg/: publisher_testing  ur5_arm_test
install/my_moveit_pkg/share/my_moveit_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_moveit_pkg/share/my_moveit_pkg/config/: ur5_arm_test_goal_config.yaml
install/my_moveit_pkg/share/my_moveit_pkg/launch/: ur5_arm_test.launch.py
install/robotnik_sensors/share/robotnik_sensors/: local_setup.sh  package.sh  package.xml
install/robotnik_sensors_gazebo/share/robotnik_sensors_gazebo/: package.sh
install/tf_broadcaster/share/tf_broadcaster/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur/share/ur/: local_setup.sh  package.sh
install/ur_bringup/share/ur_bringup/: local_setup.sh  package.sh
install/ur_calibration/share/ur_calibration/: local_setup.sh  package.sh
install/ur_controllers/share/ur_controllers/: package.sh
install/ur_dashboard_msgs/share/ur_dashboard_msgs/: local_setup.sh  package.sh
install/ur_description/share/ur_description/: package.sh
install/ur_moveit_config/share/ur_moveit_config/: package.sh
install/ur_robot_driver/lib/ur_robot_driver/: ur_ros2_control_node
install/ur_robot_driver/share/ur_robot_driver/: local_setup.sh  package.sh
install/ur_simulation_gazebo/share/ur_simulation_gazebo/: local_setup.sh  package.sh
log/: latest_build
robotnik_sensors/robotnik_sensors/launch/: view_sensor.launch
robotnik_sensors/robotnik_sensors_gazebo/: CMakeLists.txt
ur5_arm_msgs/: CMakeLists.txt  package.xml
ur5_arm_msgs/srv/: UR5ServiceMessage.srv
ur5_arm_pkg/: CMakeLists.txt  package.xml
ur5_arm_pkg/config/: kinematics.yaml  motion_planning_python_api_tutorial.yaml  ompl_planning.yaml  ur5.srdf  ur5.urdf  ur5_arm_test_goal_config.yaml
ur5_arm_pkg/launch/: ur5_arm_test.launch.py  ur5_arm_test_2.launch.py
ur5_arm_pkg/src/: service_test.cpp  ur5_arm_test.cpp
(+17 files in other folders)
