<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_moveit_pkg</name>
  <version>2.35.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lyndi_cloutier@student.uml.edu">csrobot</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
